Make graphs line up when using right table legend

--- a/src/css/less/graph.less
+++ b/src/css/less/graph.less
@@ -151,6 +151,10 @@
   .graph-legend-table .graph-legend-series {
     display: table-row;
   }
+  
+  .graph-legend-table {
+     min-width: 230px;
+  }
 }
 
 .graph-legend-series-hidden {
