Add media query to disable .graph-legend-rightside for narrow screens

--- a/src/css/less/graph.less
+++ b/src/css/less/graph.less
@@ -123,11 +123,12 @@
   }
 }
 
+@media(min-width: 500px) {
 .graph-legend-rightside {
 
   &.graph-wrapper {
     display: table;
-    width: 100%;
+    width: 99%;
   }
 
   .graph-canvas-wrapper {
@@ -160,6 +161,7 @@
   .graph-legend-table {
      min-width: 230px;
   }
+}
 }
 
 .graph-legend-series-hidden {
